fix /locations layout issue

--- a/source/sass/modules/_classes.scss
+++ b/source/sass/modules/_classes.scss
@@ -113,6 +113,8 @@
 }
 .tile {
     display: block;
+    }
+.tile__wrap {
     position: relative;
     }
 .tile + .tile {
